www/css/bookmarklet.css
#translationBox {
	background: #FAFFE9;
	width: 350px;
	height: 120px;
	overflow: auto;
	border: 7px solid #CEDC9C;
	-moz-border-radius: 15px;
	-webkit-border-radius: 15px;
	border-radius: 15px;
	
	font-size: 12px;
	
	position: fixed;
	top: 10px;
	display: none;
}

#translationBox.loading {
	background-image: url(http://deutsch/images/loading.gif);
	background-repeat: no-repeat;
	background-position: center center; 
}

	#translationBox .container {
		border: 1px solid #5B7500;
		-moz-border-radius: 9px;
		-webkit-border-radius: 9px;
		border-radius: 9px;
		height: 118px;
	}
		#translationBox .container .title {
			margin: 5px 10px;
			border-bottom: 1px solid #000;
		}
			#translationBox .container .title .fixed {
				font-weight: bold;
			}
				#highlightedText span {
					background: url(http://deutsch/images/translations.bg.png) repeat-x center top;
				}
		
		#translationBox .container .translation {
			padding: 0px 15px;
		}
			#translationBox .container .translation table.info {
				width: 100%;
				border-collapse: collapse;
			}
				#translationBox .container .translation table.info th {
					font-weight: bold;
					border-bottom: 1px solid #000;
				}
				
				#translationBox .container .translation table.info td {
					background: url(http://deutsch/images/translations.bg.png) repeat-x center top;
					border-bottom: 1px solid #000;
					padding: 1px 2px;
				}
				
				#translationBox .container .translation table.info tr:last-child td {
					border-bottom: 0px;
				}
				
				#translationBox .container .translation table.info th:first-child,
				#translationBox .container .translation table.info td:first-child {
					border-right: 1px solid #000;
				}
				
				#translationBox .container .translation table.info td[colspan] {
					border-right: 0px;
					text-align: center;
				}

